# app/models/user.py
@@ -10,8 +10,10 @@ class User(UserMixin, Base):
 
     id = Column(Integer, primary_key=True, autoincrement=True)
     username = Column(String(100), unique=True)
+    organization = Column(String(100), nullable=False)
     _password = Column("password", String(100), nullable=False)
     permission = Column(Integer, nullable=False, default=0)
+    block = Column(Integer, nullable=False, default=0)
 
     @property
     def password(self):
